# HRLLM_MCP_Claude

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
prompts/: claude_desktop.md
src/client/: hr_agent.py
src/database/: seed_db.py
src/server/: hr_mcp_server.py
