[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umbrella-corporate-hr-mcp"
version = "1.0.0"
description = "A Model Context Protocol (MCP) workspace featuring server-side SQL data masking"
readme = "README.md"
authors = [
    { name = "Abhisakh Sarma" }
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
